[package]
name = "rust-log-filter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
regex = "1"
once_cell = "1.19.0"

[profile.release]
opt-level = "z"  # Optimize for size, crucial for web environments.
lto = true       # Enable Link Time Optimization for a smaller binary.